add dice game with conditional rules and array

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     
+    <button id="player_button">Tira il dado del giocatore</button>
+    <button id="computer_button">Tira il dado del computer</button>
+    <button id="result">Scopri il vincitore!</button>
+    
+    <div class="player_result"></div>
+    <div class="computer_result"></div>
+    <div class="comment"></div>
+
 <script src="./js/script.js"></script>
 </body>
 </html>
